kustomize/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: cks-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cks-frontend
  template:
    metadata:
      labels:
        app: cks-frontend
    spec:
      containers:
        - name: cks-frontend
          image: registry.toolz.homelabz.eu/library/cks-frontend:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
  strategy:
    blueGreen:
      activeService: cks-frontend
      previewService: cks-frontend-preview
      autoPromotionEnabled: true
      scaleDownDelaySeconds: 30
      prePromotionAnalysis:
        templates:
          - templateName: cypress-tests-cks-frontend
        args:
          - name: app-name
            value: cks-frontend
          - name: app-url
            value: "https://dev.cks.homelabz.eu"
          - name: environment
            value: "dev"
      postPromotionAnalysis:
        templates:
          - templateName: promote-cks-frontend-to-prod
        args:
          - name: app-name
            value: cks-frontend
